--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
   .container {
     max-width: 500px;
     margin: 0 auto;
-    background: red;
+    background: black;
     height: 100vh;
-    background-image: url("https://i.ibb.co/nbnzQLh/pinterestdownloader-com-1685780901-564461.gif");
+    background-image: url("bg1.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -26,23 +26,28 @@
     padding: 20px;
   }
 
-  .audio {
-    padding-top:10px;
-  }
   
   .profile>img {
     width: 150px;
     height: 150px;
+    border: 3px solid #fff;
+    border-radius: 100%;
    
   }
   
-  .profile>p {
+  .h1 {
     font-size: 2em;
     letter-spacing: 2px;
     color: #fff;
     text-transform: capitalize;
     text-align: center;
     
+  }
+
+  .title {
+    font-size: 1em;
+    color:white;
+    text-align:center;
   }
 
  
