--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     margin: 0 auto;
     background: black;
     height: 100vh;
-    background-image: url("bg2.jpg");
+    background-image: url("src/img/bg2.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
