--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     margin: 0 auto;
     background: black;
     height: 100vh;
-    background-image: url("src/img/bg4.jpg");
+    background-image: url("src/img/bg.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -30,7 +30,8 @@
   .profile>img {
     width: 150px;
     height: 150px;
-   
+    border: 3px solid #222;
+    border-radius: 100%;
    
   }
   
