--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   .profile>img {
     width: 150px;
     height: 150px;
-    border: 3px solid #222;
+    border: 3px solid #fff;
     border-radius: 100%;
    
   }
