--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
   .container {
     max-width: 500px;
     margin: 0 auto;
-    background: black;
+    background: white;
     height: 100vh;
-    background-image: url("src/img/bg.jpg");
+    background-image: url("src/gif/bg.gif");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -30,26 +30,26 @@
   .profile>img {
     width: 150px;
     height: 150px;
-    border: 3px solid #fff;
-    border-radius: 100%;
+    /* border: 3px solid #fff;
+    border-radius: 100%; */
    
   }
   
   .h1 {
     font-size: 2em;
     letter-spacing: 2px;
-    color: #222;
+    color: #fff;
     text-transform: capitalize;
     text-align: center;
-    
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
     
   }
 
   .title {
     font-size: 1em;
-    color:#222;
+    color:#fff;
     text-align:center;
-
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
   }
 
  
