--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@
     margin: 0 auto;
     background: white;
     height: 100vh;
-    background-image: url("src/gif/bg.gif");
+    /* background-image: url("src/gif/bg.gif"); */
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    background-color: #333;
   }
   
   .profile {
@@ -30,8 +31,8 @@
   .profile>img {
     width: 150px;
     height: 150px;
-    /* border: 3px solid #fff;
-    border-radius: 100%; */
+    border: 3px solid #fff;
+    border-radius: 100%;
    
   }
   
@@ -87,3 +88,7 @@
     color:#fff;
     font-size: 20px;
   }
+
+
+
+  
