--- a/style.css
+++ b/style.css
@@ -12,7 +12,15 @@
     margin: 0 auto;
     background: white;
     height: 100vh;
-    /* background-image: url("src/gif/bg.gif"); */
+    background-image: url("src/gif/bg1.gif");
+    /* background: linear-gradient(to right, #f7a399, #9ad6e5); */
+    /* background: linear-gradient(to right, #e74c3c, #3498db, #2ecc71); */
+    /* background: linear-gradient(to right, #9b59b6, #8e44ad); */
+    /* background: linear-gradient(to right, #eccc68, #ff9f43); */
+    /* background: linear-gradient(to right, #78e08f, #ffb3a7); */
+    /* background: linear-gradient(to right, #2c3e50, #ecf0f1); */
+
+
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -78,7 +86,7 @@
   }
   
   .link>a:hover {
-    background-color: grey;
+    background: #FFDAE9;
   }
   
   .footer {
