--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    background-color: #333;
+    /* background-color: #333; */
   }
   
   .profile {
