--- a/style.css
+++ b/style.css
@@ -84,12 +84,13 @@
   .footer {
     text-align: center;
     margin-top: auto;
-    padding-top: 73px;
+    padding-top: 9em;
   }
   
   .footer>i {
     color: black;
     font-size: 20px;
+    
   }
 
 
